big refactor, cleaned up a lot of old code with the IDE's help